# ayon-usd

./: .gitignore  .gitmodules  .pre-commit-config.yaml  README.md  create_package.py  linux-containerfile  maya_pin.json  mkdocs.yml  package.py  pyproject.toml  ruff.toml  version.py  versions.json
.github/ISSUE_TEMPLATE/: feature_request.yml  proposal_technical.yml  pull_request_template.md
.github/workflows/: deploy_mkdocs.yml
0.1.5/: 404.html  index.html  license.html
0.1.5/Ayon_Docs/: Admin_Docs.html  Dev_Docs.html
0.1.5/autoapi/: summary.html
0.1.5/autoapi/client/ayon_usd/: addon.html  config.html  index.html  utils.html  version.html
0.1.5/autoapi/client/ayon_usd/hooks/: index.html  pre_resolver_init.html  usd_pinning_root.html
0.1.5/autoapi/client/ayon_usd/plugins/: index.html
0.1.5/autoapi/client/ayon_usd/plugins/publish/: extract_skeleton_pinning_json.html  index.html  integrate_usd_output_processor_remap_relative.html
0.1.5/autoapi/client/ayon_usd/standalone/: index.html
0.1.5/autoapi/client/ayon_usd/standalone/usd/: index.html
0.1.5/autoapi/server/: index.html
0.1.5/autoapi/server/settings/: index.html  main.html  publish_plugins.html
0.1.5/search/: search_index.js  search_index.json
0.1.6/: 404.html  index.html
0.1.6/Ayon_Docs/: Dev_Docs.html
0.1.6/autoapi/: summary.html
0.1.6/autoapi/client/ayon_usd/: index.html
0.1.6/autoapi/client/ayon_usd/hooks/: index.html  pre_resolver_init.html
0.1.6/autoapi/client/ayon_usd/plugins/: index.html
0.1.6/autoapi/client/ayon_usd/plugins/publish/: index.html  integrate_usd_output_processor_remap_relative.html
0.1.6/autoapi/client/ayon_usd/standalone/: index.html
0.1.6/search/: search_index.js  search_index.json
0.1.7/: 404.html  index.html  license.html  objects.inv
0.1.7/Ayon_Docs/: Admin_Docs.html  Dev_Docs.html
0.1.7/autoapi/: summary.html
0.1.7/autoapi/client/ayon_usd/: addon.html  config.html  index.html  utils.html  version.html
0.1.7/autoapi/client/ayon_usd/hooks/: index.html  pre_resolver_init.html  usd_pinning_root.html
0.1.7/autoapi/client/ayon_usd/plugins/: index.html
0.1.7/autoapi/client/ayon_usd/plugins/publish/: extract_skeleton_pinning_json.html  index.html  integrate_usd_output_processor_remap_relative.html
0.1.7/autoapi/client/ayon_usd/standalone/: index.html
0.1.7/autoapi/client/ayon_usd/standalone/usd/: index.html
0.1.7/autoapi/server/: index.html
0.1.7/autoapi/server/settings/: conversion.html  index.html  main.html  publish_plugins.html
0.1.7/search/: search_index.js  search_index.json
Docs/Ayon_Docs/: Admin_Docs.md  Dev_Docs.md
client/: pyproject.toml
client/ayon_usd/: __init__.py  addon.py  config.py  download_ui.py  utils.py  version.py
client/ayon_usd/cache_manager/: __init__.py  cache_client.py  cache_service.py  config_manager.py  graphql_client.py  memcached_client.py  null_client.py  prefetcher.py  rate_limiter.py  websocket_client.py
client/ayon_usd/hooks/: pre_resolver_init.py  setup_memcached.py  usd_pinning_root.py
client/ayon_usd/plugins/publish/: collect_resolver_env_vars.py  collect_usd_pinning_env_vars.py  extract_skeleton_pinning_json.py  integrate_pinning_file.py  integrate_usd_output_processor_remap_relative.py
client/ayon_usd/plugins/publish/houdini/: collect_usd_pinning_file.py  generate_usd_pinning_file.py
client/ayon_usd/standalone/Usd/Pinning/: pinning_file_helper.py  pinning_utils.py
client/ayon_usd/standalone/usd/pinning/: __init__.py  __pinning_file_generation_funcs.py  _pinning_file_generation_funcs.py  pinning_file_helper.py
docs/: index.md
docs/Ayon_Docs/: Admin_Docs.md  Caching_Docs.md  Dev_Docs.md
server/: __init__.py  addon.py  settings.py
server/api/: __init__.py  get_paths_for_assigned_assets.py  router.py  templating.py
server/models/: __init__.py  entity_path_list.py
server/settings/: __init__.py  conversion.py  main.py  publish_plugins.py
test-build/: 404.html  index.html  license.html  objects.inv
test-build/Ayon_Docs/: Admin_Docs.html  Dev_Docs.html
test-build/autoapi/: summary.html
test-build/autoapi/client/ayon_usd/: addon.html  config.html  index.html  utils.html  version.html
test-build/autoapi/client/ayon_usd/hooks/: index.html  pre_resolver_init.html  usd_pinning_root.html
test-build/autoapi/client/ayon_usd/plugins/: index.html
test-build/autoapi/client/ayon_usd/standalone/: index.html
test-build/autoapi/server/: index.html
test-build/autoapi/server/settings/: index.html  main.html  publish_plugins.html
test-build/search/: search_index.js  search_index.json
tests/client/ayon_usd/: conftest.py  test_utils.py
tools/: Dockerfile.build-usd.ubuntu  manage.ps1  manage.sh
(+12 files in other folders)
