[project]
name = "ayon-usd"
[project]
name = "ayon-usd"
version = "1.0.1"
description = "AYON Addon providing USD support"
authors = [
    {name = "Ynput s.r.o.", email = "info@ynput.io"}
]
license = {file = "LICENSE"}
readme = "README.md"

requires-python = ">=3.11,<3.12"

dependencies = [
    "ayon-python-api>=1.0.5",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-print>=1.0.0",
    "pytest-ruff>=0.3.2",
    "ayon-python-api>=1.0.5",
    "ruff>=0.15.0",
    "pre-commit>=3.6.2",
    "codespell>=2.2.6",
    "pydantic>=2.7.1",
    "pydocstyle>=0.0.0",
    "requests>=2.26.0",
    "semver>=3.0.2",  # needed for ayon-python-api to run tests
    "clique>=2.0.0"
]

[project.urls]
homepage = "https://ynput.io"
documentation = "https://ayon.ynput.io"
repository = "https://github.com/ynput/ayon-usd-resolver"
