[project]
name = "ayon-usd"
version = "1.0.1"
description = "AYON Addon providing USD support"
authors = [
    {name = "Ynput s.r.o.", email = "info@ynput.io"}
]
license = {file = "LICENSE"}
readme = "README.md"

requires-python = ">=3.11,<3.12"

dependencies = [
    "ayon-python-api>=1.0.5",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "pytest-print>=1.0.0",
    "ayon-python-api>=1.0.5",
    "ruff>=0.15.0",
    "pre-commit>=3.6.2",
    "codespell>=2.2.6",
    "pydocstyle>=0.0.0",
    "requests>=2.26.0",
    "semver>=3.0.2",  # needed for ayon-python-api to run tests
    "clique>=2.0.0",
    "websockets>=16.0",
    "loguru>=0.7.3",
]

[dependency-groups]
docs = [
    "mkdocs-material>=9.6.7",
    "mkdocs-autoapi >= 0.4.0",
    "mkdocstrings-python >= 1.16.2",
    "mkdocs-minify-plugin >= 0.8.0",
    "markdown-checklist >= 0.4.4",
    "mdx-gh-links >= 0.4",
    "pymdown-extensions >= 10.14.3",
    "mike >= 2.1.3",
    "mkdocstrings-shell >= 1.0.2",
]

[project.urls]
homepage = "https://ynput.io"
documentation = "https://ayon.ynput.io"
repository = "https://github.com/ynput/ayon-usd-resolver"
