[project]
name = "ayon-usd"
version = "0.1.0"
description = "AYON USD addon"
requires-python = ">=3.11"

dependencies = [
    "pymemcache>=4.0.0",
    "aiohttp>=3.8.0",
    "aiofiles>=24.1.0",
    "websockets>=11.0.0",
    "loguru>=0.7.0",
    "dotenv>=0.19.0",
    "aiohttp-middlewares>=2.4.0"
]

[tool.poetry.dependencies]
pymemcache = "^4.0.0"
aiohttp = "^3.8.0"
aiofiles = "^24.1.0"
websockets = "^15.0"
loguru = "^0.7.0"
aiohttp_middlewares = "^2.4.0"
